--- a/model/templates/index.html
+++ b/model/templates/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet.css" />
         <script src="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet.js"></script>
 
-        <link rel="stylesheet" href="/demo/cluster.css" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='demo/cluster.css') }}" />
 
         <style>
             html, body, #map {
@@ -18,6 +18,6 @@
     </head>
     <body>
         <div id="map"></div>
-        <script src="/demo/index.js"></script>
+        <script src="{{ url_for('static', filename='demo/index.js') }}"></script>
     </body>
 </html>
