--- a/model/templates/index.html
+++ b/model/templates/index.html
@@ -6,7 +6,7 @@
 
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet.css" />
         <script src="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet.js"></script>
-
+        <script src="http://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='demo/cluster.css') }}" />
 
         <style>
