Change dropdown direction

--- a/model/templates/index.html
+++ b/model/templates/index.html
@@ -69,7 +69,7 @@
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="caret"></span> Country
                             </button>
-                            <ul class="dropdown-menu pull-right">
+                            <ul class="dropdown-menu pull-left">
                                 <li><a href="#">USA</a></li>
                                 <li><a href="#">Spain</a></li>
                                 <li><a href="#">Mexico</a></li>
@@ -83,7 +83,7 @@
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="caret"></span> Operator
                             </button>
-                            <ul class="dropdown-menu pull-right">
+                            <ul class="dropdown-menu pull-left">
                                 <li><a href="#">Geocell</a></li>
                                 <li><a href="#">Magti</a></li>
                                 <li><a href="#">Beeline</a></li>
