Fix filtering bug

--- a/model/templates/index.html
+++ b/model/templates/index.html
@@ -72,11 +72,11 @@
                             </button>
                             <ul class="dropdown-menu pull-left" id="countryChooser">
                                 <li><a href="#">Country</a></li>
-                                <li><a href="#">Turkey</a></li>
-                                <li><a href="#">Russia</a></li>
-                                <li><a href="#">Armenia</a></li>
+                                <li><a href="#">TURKEY</a></li>
+                                <li><a href="#">RUSSIA</a></li>
+                                <li><a href="#">ARMENIA</a></li>
                                 <li><a href="#">USA</a></li>
-                                <li><a href="#">Azerbaijan</a></li>
+                                <li><a href="#">AZERBAIJAN</a></li>
                             </ul>
                         </div><!-- /btn-group -->
                     </div><!-- /input-group -->
@@ -93,8 +93,8 @@
                                 <li><a href="#">Tbilisi</a></li>
                                 <li><a href="#">Adjara</a></li>
                                 <li><a href="#">Kvemo Kartli</a></li>
-                                <li><a href="#">Mtsketa - Mtianeti</a></li>
-                                <li><a href="#">Samegrelo - Zemo Svaneti</a></li>
+                                <li><a href="#">Mtskheta - Mtianeti</a></li>
+                                <li><a href="#">Samegelo - Zemo Svaneti</a></li>
                             </ul>
                         </div><!-- /btn-group -->
                     </div><!-- /input-group -->
